Position elements in middle + fix overflow:hidden not working

--- a/style.css
+++ b/style.css
@@ -5,39 +5,40 @@
 }
 
 body {
-	/*display: flex; try centering with flexbox*/
-	/*justify-content: center; */
+	display: flex;
+	justify-content: center; /*not working*/
 }
 
 .page-container {
 	position: relative;
-	width: 90%;
-	height: 90%;
+	width: 900px;
+	height: 600px;
+	margin: 20px;
 	/*max-width: 300px; move this to a media query*/
-	margin: 0 auto;
-	padding: 0;
 }
 
 #img-container {
 	overflow: hidden;
-	width: 100%;
+	width: 100%; 
 	height: 100%;
+	position: relative;
 }
 
 #img-container img {
 	width: 120%;
 	height: 120%;
 	/*max-width: 1024px;*/
-	margin-top: -100px;
-	margin-left: -130px;
+	margin-top: -80px;
+	margin-left: -80px;
+	position: absolute; /*if the images aren't positioned absolute they're not on top of each other but if they are they disappear (8 (setting the width and height of page-container makes them show up*/
 	transition-property: : opacity, transform;
-	transition-duration: 5s, 10s;
+	transition-duration: 4s, 20s; 
 	opacity: 0;
 
 	transform-origin: bottom left;
 }
 
-#img-container :nth-child(2n+1) {
+#img-container :nth-child(2n+1) { /*what does the n mean?*/
 	transform-origin: top right;
 }
 
@@ -55,7 +56,7 @@ body {
 
 #img-container .transition {
 	opacity: 1;
-	transform: scale(1.5) translate(30px);
+	transform: scale(1.2) translate(15px);
 }
 
 
